<resources>
    <string name="app_name">Crypto News</string>
    <string name="action_settings">Settings</string>
    <string name="empty_view_text">There is no News at the moment</string>

    <dimen name="padding_normal">16dp</dimen>
    <dimen name="padding_large">24dp</dimen>

    <style name="TextAppearance.Filter" parent="@android:style/TextAppearance.Material.Title">
        <item name="android:textSize">16sp</item>
        <item name="android:textColor">@color/filter_text</item>
    </style>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>


    <string name="title_activity_settings">Settings</string><!-- Strings related to Settings --><!-- Settings for managing Blog Services -->
    <string name="pref_header_manage">Manage Blog Websites</string>
    <string name="pref_title_font_size">Font Size (List &amp; Comment )</string>
    <string-array name="pref_font_Size_list">
        <item>Tiny</item>
        <item>Normal</item>
        <item>Medium</item>
    </string-array>
    <string-array name="pref_font_Size_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="pref_title_view_articles_via">View Articles via...</string>
    <string-array name="pref_view_articles_titles_via">
        <item>Google for Mobile Devices</item>
        <item>Tiny Papers</item>
        <item>Some Other Preferred Format</item>
    </string-array>
    <string-array name="pref_view_articles_via_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <!--Settings for Viewing Articles in web Browser or in App -->

    <string name="pref_title_view_articles_within">View Articles within…</string>
    <string-array name="pref_view_articles_within_titles">
        <item>The App</item>
        <item>Web Browsers</item>
    </string-array>
    <string-array name="pref_view_articles_within_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manage_blog_websites">Manage Blog Websites</string>
    <string name="manage_blog_title">Manage the Blog Websites you want to receive updates from. Due to scalability issues and API timeouts, you can only have a maximum of 4 websites.</string>
    <string name="demp_string_header">CCN</string>
    <string name="demo_website_url">https://ccn.com</string>
    <string name="pref_second_url">second_url</string>
    <string name="edit_reason">Please note that this application is designed to work specifically with WORDPRESS API only.The websites you add must be running on WORDPRESS and has its API return the appropraite json.</string>
    <string name="error">Internet Connection is required</string>

    <!--Sort by items-->
    <string-array name="pref_sort_by">
        <item>Default</item>
        <item>Website</item>
    </string-array>
    <string-array name="pref_sort_by_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <!--strings for menu items-->
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort by</string>
    <string name="action_favorite">Show Favorites</string>

    <string name="action_selected_one">%1$d selected</string>
    <string name="action_selected_many">%1$d selected</string>
    <string name="action_delete">action_delete</string>
    <string name="instruction_test_website">Use the test button to check if the website meets the requirements before saving</string>
    <string name="demo_test">Test</string>
    <string name="demo_save">Save</string>
    <string name="action_search">search</string>
    <string name="action_filter">filter</string>

</resources>
