<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

        <TextView
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:textSize="1sp"
            android:layout_height="wrap_content"
            android:text="@string/edit_reason"/>
        <TextView
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:textSize="14sp"
            android:layout_height="wrap_content"
            android:text="@string/instruction_test_website"/>



        <RelativeLayout
            android:layout_width="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/website_title"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_margin="16dp"
                android:hint="@string/demp_string_header"
                tools:text="CCN"
                />
            <android.support.design.widget.TextInputEditText
                android:layout_marginTop="8dp"
                android:id="@+id/website_url"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:maxLines="1"
                android:layout_below="@+id/website_title"
                android:layout_margin="16dp"
                android:hint="@string/demo_website_url"
                tools:text="https://ccn.com" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/test_button"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:text="@string/demo_test"
                    />

                <Button
                    android:id="@+id/save_button"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/demo_save" />

            </LinearLayout>




        </RelativeLayout>


    </LinearLayout>


</layout>


