<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:title="News Entry"
        >

        <Preference
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:key="@string/manage_blog_title"
            android:title="@string/manage_blog_websites"
            />

    </PreferenceCategory>

    <PreferenceCategory
            android:title="Appearance">

            <ListPreference
                android:defaultValue="0"
                android:entries="@array/pref_font_Size_list"
                android:entryValues="@array/pref_font_Size_values"
                android:key="font_size"
                android:negativeButtonText="@null"
                android:positiveButtonText="@null"
                android:title="Font Size (experimental)" />

      <ListPreference
                android:defaultValue="0"
                android:entries="@array/pref_view_articles_titles_via"
                android:entryValues="@array/pref_view_articles_via_values"
                android:key="view_via"
                android:negativeButtonText="@null"
                android:positiveButtonText="@null"
                android:title="@string/pref_title_view_articles_via" />

      <ListPreference
                android:defaultValue="0"
                android:entries="@array/pref_view_articles_within_titles"
                android:entryValues="@array/pref_view_articles_within_values"
                android:key="view_within"
                android:negativeButtonText="@null"
                android:positiveButtonText="@null"
                android:title="@string/pref_title_view_articles_within" />
        </PreferenceCategory>
</PreferenceScreen>
